--- a/web_shell/local_cloud_config/patch_notes/v0.2.5.md
+++ b/web_shell/local_cloud_config/patch_notes/v0.2.5.md
@@ -3,3 +3,6 @@
 * Message injection
 * Track injection
 * Bug fixes and gui smalls improvment
+* ruby 2.1.0
+* review all apis
+* add documentation and examples
